<resources>
    <string name="app_name">OpenpayTest</string>
    <string name="title_movies">Movies</string>
    <string name="title_map">Map</string>

    <string name="avatar_description">user avatar</string>
    <string name="rated_movies">Rated Movies</string>
    <string name="rate">Rate: %s</string>
    <string name="title_profile">Profile</string>
    <string name="title_register_location">Add location</string>
    <string name="required_permission">Required permission</string>
    <string name="notification_chanel">my_chanel_id</string>
    <string name="notification_title">Location registered</string>
    <string name="notification_message">Location successfully registered in Firestore %s,%s</string>

    <string name="notification_chanel_description">Openpay notifications</string>
    <string name="title_gallery">Gallery</string>
    <string name="error_dialog_title">Error</string>
    <string name="accept_label">Aceptar</string>
    <string name="error_pick_image_message">Error al seleccionar la imagen</string>
    <string name="success_uploading_image">Imagen almacenada exitosamente</string>

</resources>