<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.openpaytest.ui.user.UserFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_user" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.openpaytest.ui.movies.MoviesFragment"
        android:label="@string/title_movies"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.openpaytest.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_register_location"
        android:name="com.example.openpaytest.ui.registerlocation.RegisterLocationFragment"
        android:label="@string/title_register_location"
        tools:layout="@layout/fragment_register_location"
        />

</navigation>